[project]
name = "11-1-prompt-engineering-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "crewai>=1.9.3",
    "crewai-tools>=1.9.3",
    "langchain-groq>=1.1.2",
    "litellm>=1.75.3",
    "python-dotenv>=1.1.1",
]
